examples/tests/valid/debug_env.w
bring cloud;

class A {
  b: cloud.Bucket;
  init() {
    this.b = new cloud.Bucket();
    ğŸ—ºï¸;
  }
}
